--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "social-network-ts",
+  "name": "social-network-react-redux",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +14,7 @@
     "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.1",
     "axios": "^0.22.0",
+    "cors": "^2.8.5",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
